add msg erro de login, finalizada validação de user e pass

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,10 +22,16 @@
             <p class="message">Already registered? <a href="#">Sign In</a></p>
           </form>
             -->
+            <h3 id="titulo-form" class="titulo-form">LOGIN</h3>
+
+            <div id="msg" class="msg">
+              
+            </div>
+
           <form class="login-form">
-            <input id="nome" type="text" placeholder="Seu usuário..."/>
-            <input id="senha" type="password" placeholder="Sua senha..."/>
-            <button id="botao-login">login</button>
+            <input type="txt" id="nome" type="text" placeholder="Seu usuário..."/>
+            <input type= "txt "id="senha" type="password" placeholder="Sua senha..."/>
+            <button type="button" id="botao-login">login</button>
             <p class="message">Não registrado ? <a href="#">Crie uma Conta</a></p>
           </form>
         </div>
