tela de login com validação de usuário e tratamento de erros finalizada

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </div>
 
           <form class="login-form">
-            <input type="txt" id="nome" type="text" placeholder="Seu usuário..."/>
-            <input type= "txt "id="senha" type="password" placeholder="Sua senha..."/>
+            <input id="nome" type="text" placeholder="Seu usuário..."/>
+            <input id="senha" type="password" placeholder="Sua senha..."/>
             <button type="button" id="botao-login">login</button>
             <p class="message">Não registrado ? <a href="#">Crie uma Conta</a></p>
           </form>
