div de mensagens de erro adicionada

--- a/cadastro/index.html
+++ b/cadastro/index.html
@@ -25,9 +25,9 @@
             <input id="senha" type="password" placeholder="Sua senha..."/>
             <input id="confirmSenha" type="password" placeholder="Confirme sua senha..."/>
 
-            <button type="button" id="botaoCad">login</button>
+            <button type="button" id="botaoCad">CADASTRAR</button>
 
-            <p class="message">Já tem uma conta ? <a href="#">Faça login</a></p>
+            <p class="message">Já tem uma conta ? <a href="http://127.0.0.1:5500/login">Faça login</a></p>
           </form>
         </div>
       </div>
