link de não registrado

--- a/login/index.html
+++ b/login/index.html
@@ -32,7 +32,7 @@
             <input id="nome" type="text" placeholder="Seu usuário..."/>
             <input id="senha" type="password" placeholder="Sua senha..."/>
             <button type="button" id="botao-login">login</button>
-            <p class="message">Não registrado ? <a href="#">Crie uma Conta</a></p>
+            <p class="message">Não registrado ? <a href="http://127.0.0.1:5500/cadastro">Crie uma Conta</a></p>
           </form>
         </div>
       </div>
